# trip-planner

./: .coderabbit.yaml  .gitattributes  .gitignore  .project_modules.txt  AGENTS.md  CLAUDE.md  DEPENDENCY_TESTING.md  Makefile  README.md  WORKFLOW_USER_GUIDE.md  alembic.ini  autofix_report_enriched.json  codex-prompt-1052.md  codex-prompt-1065.md  codex-prompt-1067.md  codex-prompt-177.md  codex-prompt-610.md  codex-prompt-622.md  coverage.json  netlify.toml  new_site_setup.md  pr-569-unresolved-threads.md  pyproject.toml  pytest-junit.xml  render.yaml  request.json  requirements.txt  temp_fix.txt  tsconfig.planner.json  workloop-state.md
* .github/workflows/: netlify.yml
.agents/: issue-1021-ledger.yml  issue-1022-ledger.yml  issue-1049-ledger.yml  issue-1050-ledger.yml  issue-1051-ledger.yml  issue-1152-ledger.yml  issue-1332-ledger.yml  issue-1367-ledger.yml  issue-1462-ledger.yml  issue-534-ledger.yml  issue-560-ledger.yml  issue-579-ledger.yml  issue-588-ledger.yml  issue-589-ledger.yml  issue-843-ledger.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  deploy_trigger.txt  path-classification.yml  renovate.json
.github/ISSUE_TEMPLATE/: agent_task.yml  config.yml
.github/agents/: registry.yml
.github/codex/: AGENT_INSTRUCTIONS.md
.github/copilot-skills/: 00-core-skills.md  01-ci-debugging.md  02-github-operations.md  README.md
.github/scripts/: agent_delegation_policy.js  agent_registry.js  agent_stall_rotation.js  agents-guard.js  agents_belt_scan.js  agents_dispatch_summary.js  agents_orchestrator_resolve.js  agents_pr_meta_keepalive.js  agents_pr_meta_orchestrator.js  agents_pr_meta_update_body.js  agents_verifier_context.js  api-helpers.js  auto_pilot_transitions.js  autofix_emit_report.py  autopilot_metrics.js  bot-comment-dismiss.js  checkout_source.js  (+57 more)
.mypy_cache/: missing_stubs
.tmp/: trip_planner.db
1. tests/: test_complexity.py
agents/: claude-1034.md  claude-961.md  claude-962.md  claude-963.md  claude-964.md  claude-965.md  claude-966.md  claude-967.md  claude-968.md  claude-969.md  claude-970.md  claude-971.md  claude-972.md  codex-1031.md  codex-1122.md  codex-1123.md  codex-1124.md  codex-1125.md  codex-1126.md  codex-1127.md  codex-1128.md  codex-1129.md  codex-1130.md  codex-1332.md  codex-1462.md  codex-1492.md  codex-1493.md  codex-176.md  codex-534.md  codex-560.md  codex-588.md  codex-589.md  codex-653.md  codex-661.md  codex-674.md  codex-675.md  codex-676.md  codex-677.md  codex-678.md  codex-679.md  (+23 more)
bundle/: index.html  style.css
config/: llm_slots.json  model_registry.json  model_selection_policy.json
data/: itineraries_compact.json  itineraries_extended.json  segments_master.json
design-system/: PRESENTATION_PATTERNS.md  README.md  components.css  ds_streamlit.py  tokens.css
docs/: AGENT_ISSUE_FORMAT.md  CI_SYSTEM_GUIDE.md  CODEX_TOKEN_REFRESH.md  LABELS.md  MODEL_SELECTION_POLICY.md  SETUP_CHECKLIST.md  account-session-runtime.md  accounts-persistence-workflow-state-epic.md  application-foundation-epic.md  baseline-kit-dependency.md  budget-business-policy-execution-epic.md  business-objective-derivation-boundary.md  business-orchestration-boundary.md  business-travel-profile-contract.md  business-travel-profile.md  design-coverage-map.md  domain-contracts.md  effortless-travel-roadmap.md  frontend-app-shell-foundation.md  frontend-application-layer-epic.md  frontend-entry-flows.md  frontend-planner-panel-workspace.md  frontend-route-loading-foundation.md  frontend-route-visualization.md  frontend-trip-workspace.md  google-maps-platform-hardening-epic.md  implementation-plan.md  issue-560-delivery-plan.md  itinerary-objective-derivation-boundary.md  itinerary-scenario-assembly-boundary.md  langchain-planner-runtime-epic.md  leisure-preference-contract.md  leisure-preference-engine.md  leisure-preference-epic.md  leisure-preference-schema.md  leisure-tradeoff-taxonomy.md  live-runtime-completion-epic.md  live-tpp-execution-reoptimization-epic.md  local-testing-plan.md  maps-timeline-comparison-epic.md  (+30 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/: aggregate_agent_metrics.py  api_client.py  autopilot_metrics_collector.py  autopilot_step_timer.py  build_html.py  calc_penalty.py  check_agents_md_freshness.py  check_deliberate_break.py  check_deploy_origin.py  check_full_product_verification.py  check_full_stack_runtime.sh  check_pr_thread_acceptance.js  check_production_readiness.sh  check_test_dependencies.sh  check_xfail_strictness.py  ci_coverage_delta.py  ci_history.py  ci_metrics.py  coverage_history_append.py  create_follow_up_prs_from_manifest.js  generate_itins.py  generate_segments.py  list_disposition_threads_from_doc.js  list_fix_threads_from_doc.js  list_unresolved_pr_threads.js  orchestrator_skill.py  reference_packs.py  render_pr_review_thread_report.py  resolve_disposition_threads_from_manifest.js  reusable_ci_scope.py  run_full_stack_dev.sh  run_two_trip_ui_canary.sh  seed_demo_data.py  state_fingerprint.py  sync_dev_dependencies.py  sync_test_dependencies.py  tpp_migration_guard.py  validate_dependency_test_setup.py  validate_request.py  validate_run_contract.py  (+2 more)
shared/: tasks_phase2.md
tests/: conftest.py  test_build_html.py  test_check_test_dependencies_script.py  test_complexity.py  test_dependency_version_alignment.py  test_generate_segments.py  test_penalty.py  test_penalty_module.py  test_pr_verifier.py  test_render_pr_review_thread_report.py  test_repo_hygiene.py  test_sync_test_dependencies.py  test_validate_dependency_test_setup.py
tools/: __init__.py  check_model_registry_freshness.py  ci_failure_triage.py  coverage_guard.py  coverage_trend.py  discover_model_catalog.py  embedding_provider.py  evaluate_model_benchmark.py  langchain_client.py  llm_provider.py  llm_registry.py  post_ci_summary.py  requirements-llm.txt  resolve_mypy_pin.py
trip_planner/: __init__.py  _option_contracts.py  _validators.py
trip_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+4322 files in other folders)
