[project]
name = "trip-planner"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic==1.18.4",
    "anyio==4.13.0",
    "fastapi==0.136.1",
    "langchain-core==1.4.0",
    "langchain-openai==1.2.1",
    "psycopg[binary]==3.3.4",
    "starlette==1.0.0",
    "sqlalchemy==2.0.49",
    "uvicorn==0.46.0",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "mypy>=2.0.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "black==26.3.1",
    "httpx==0.28.1",
    "PyYAML==6.0.3",
    "types-PyYAML==6.0.12.20260510",
    "pytest-httpserver==1.1.5",
]
[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*", "trip_planner*"]

[tool.setuptools.package-data]
trip_planner = [
    "resources/business/*.json",
    "resources/options/bundles/*.json",
    "resources/preferences/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scripts"]
addopts = ["--ignore=tests/test_build_html.py"]

[tool.mypy]
exclude = "(^1\\. tests|^scripts/langchain|^scripts/validate_request\\.py|^scripts/build_html\\.py|^scripts/autopilot_step_timer\\.py|^scripts/autopilot_metrics_collector\\.py|^tools/llm_provider\\.py)"
explicit_package_bases = true
namespace_packages = true

[tool.coverage.run]
omit = [
    # Synced from Workflows repo - tested there
    "scripts/ci_*.py",
    "scripts/sync_*.py",
    "scripts/coverage_history_append.py",
    "tools/*.py",
    ".github/scripts/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
extend-exclude = '''
(
  /\.venv/
| /\.workflows-lib/
| /node_modules/
)
'''

[[tool.mypy.overrides]]
module = [
    "jsonschema",
    "jinja2",
    "langchain_anthropic",
    "langchain_openai",
    "langchain_core.*",
    "tomlkit",
]
ignore_missing_imports = true
