[project]
name = "trip-planner"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic==1.18.5",
    "anyio==4.14.2",
    "fastapi==0.139.2",
    "jsonschema>=4.26.0,<4.27.0",
    "langchain-core==1.5.0",
    "langchain-openai==1.3.5",
    "psycopg[binary]==3.3.4",
    "starlette==1.3.1",
    "sqlalchemy==2.0.51",
    "uvicorn==0.51.0",
]


[project.optional-dependencies]
app = []
dev = [
    "ruff==0.15.22",
    "mypy==2.3.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "black==26.5.1",
    "httpx==0.28.1",
    "PyYAML==6.0.3",
    "types-PyYAML==6.0.12.20260518",
    "pytest-httpserver==1.1.5",
    "numpy==2.5.1",
    "pandas==3.0.3",
    # Shared app behavior baseline harness (pulls pytest-regressions). Pinned to
    # the Workflows default branch; move to a tagged ref once the package is versioned.
    "app-baseline-kit @ git+https://github.com/stranske/Workflows.git#subdirectory=packages/app-baseline-kit",
]
[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

# Do not emit app-baseline-kit into requirements.lock. It is consumed from the
# Workflows monorepo via an unpinned `@main` git URL (see [project.optional-
# dependencies].dev), so freezing a commit SHA in the lock conflicts with that
# URL the moment Workflows main advances ("conflicting URLs for package
# app-baseline-kit" -> uv install aborts). Leaving it unpinned lets the editable
# project install resolve it from main, with no lock to keep refreshed.
[tool.uv.pip]
no-emit-package = ["app-baseline-kit"]

[tool.setuptools.packages.find]
include = ["scripts*", "trip_planner*"]

[tool.setuptools.package-data]
trip_planner = [
    "resources/business/*.json",
    "resources/logistics/*.json",
    "resources/options/bundles/*.json",
    "resources/preferences/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scripts"]
addopts = ["--ignore=tests/test_build_html.py"]

[tool.mypy]
exclude = "(^1\\. tests|^scripts/langchain|^scripts/validate_request\\.py|^scripts/build_html\\.py|^scripts/autopilot_step_timer\\.py|^scripts/autopilot_metrics_collector\\.py|^tools/llm_provider\\.py)"
explicit_package_bases = true
namespace_packages = true

[tool.coverage.run]
omit = [
    # Coverage gates track product/runtime code. Repo automation scripts and test
    # harnesses are exercised separately and should not dilute the app baseline.
    "scripts/*.py",
    "scripts/**/*.py",
    "tests/*.py",
    "tests/**/*.py",
    # Synced from Workflows repo - tested there
    "scripts/ci_*.py",
    "scripts/sync_*.py",
    "scripts/coverage_history_append.py",
    "tools/*.py",
    ".github/scripts/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
extend-exclude = '''
(
  /\.venv/
| /\.workflows-lib/
| /node_modules/
)
'''

[[tool.mypy.overrides]]
module = [
    "jsonschema",
    "jinja2",
    "langchain_anthropic",
    "langchain_openai",
    "langchain_core.*",
    "tomlkit",
]
ignore_missing_imports = true
